--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.4",
     "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "stripe": "^13.9.0"
   }
 }
