--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-stripe-checkout": "^2.6.3",
     "recharts": "^2.9.0",
     "sass": "^1.69.0",
+    "socket.io-client": "^4.7.2",
     "swiper": "^10.3.1",
     "web-vitals": "^3.5.0"
   },
