--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.9",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -30,6 +32,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.7",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.9.0",
     "sass": "^1.69.0",
     "socket.io-client": "^4.7.2",
