--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,11 @@
     "font-awesome": "^4.7.0",
     "html-react-parser": "^4.2.2",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
@@ -34,7 +35,6 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.3",
     "recharts": "^2.9.0",
-    "sass": "^1.69.0",
     "socket.io-client": "^4.7.2",
     "swiper": "^10.3.1",
     "web-vitals": "^3.5.0"
